--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'adoptopenjdk'
 
       # Cache Gradle dependencies
       - name: Cache Gradle dependencies
@@ -39,11 +37,7 @@ jobs:
       - name: Set up Gradle
         uses: gradle/wrapper-validation-action@v1
 
-      # Display Gradle version
-      - name: Display Gradle Version
-        run: ./gradlew --version
-
-      # Build the APK
+      # Build the APK (assembleRelease)
       - name: Build Release APK
         run: ./gradlew assembleRelease
 
@@ -51,9 +45,9 @@ jobs:
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest
 
-      # Upload the APK as an artifact
-      - name: Upload APK as artifact
+      # Upload APK as artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v3
         with:
-          name: weather-now-later-release-apk
+          name: release-apk
           path: app/build/outputs/apk/release/app-release.apk
