--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
@@ -47,7 +49,7 @@ jobs:
 
       # Upload APK as artifact
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: release-apk
           path: app/build/outputs/apk/release/app-release.apk
