--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,46 +10,19 @@ on:
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Set up JDK 17
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - uses: actions/checkout@v4
+      - name: set up JDK 11
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adoptopenjdk'
+          java-version: '11'
+          distribution: 'temurin'
+          cache: gradle
 
-      # Cache Gradle dependencies
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      # Set up Gradle wrapper
-      - name: Set up Gradle
-        uses: gradle/wrapper-validation-action@v1
-
-      # Build the APK (assembleRelease)
-      - name: Build Release APK
-        run: ./gradlew assembleRelease
-
-      # Run Unit Tests
-      - name: Run unit tests
-        run: ./gradlew testDebugUnitTest
-
-      # Upload APK as artifact
-      - name: Upload APK
-        uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: app/build/outputs/apk/release/app-release.apk
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
