--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      - name: Publish core, build APK, and run tests
-        run: ./gradlew core:assembleRelease :core:publishToMavenLocal assembleDebug testDebugUnitTest
+      - name: Publish core module to local Maven
+        run: ./gradlew :core:publishReleasePublicationToMavenRepository
 
-      - name: Find APK files
-        run: find . -name "*.apk"
+      - name: Build APK
+        run: ./gradlew :app:assembleDebug
+
+      - name: Run Unit Tests
+        run: ./gradlew testDebugUnitTest
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
